package com.example.calendarapp.Fragments.Groups;

import androidx.fragment.app.Fragment;

import com.example.calendarapp.API.Interfaces.Group;

public class GroupCalendarFragment extends Fragment {

}